[project]
name = "pacman-ai"
version = "1.0.0"
description = "Pac-Man game with AI search algorithms (BFS, DFS, UCS, A*, Minimax, Alpha-Beta)"
authors = [
    {name = "Natnael Yohanes", email = "mataniayohanes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
